@@ -1,3 +1,13 @@
+Thu Sep 19 14:12:02 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* include/ruby/ruby.h: make Symbol objects frozen.
+	  [Feature #8906]
+	  I want to freeze this good day, too.
+
+	* test/ruby/test_eval.rb: catch up this change.
+
+	* test/ruby/test_symbol.rb: add a test to check frozen symbols.
+
 Thu Sep 19 09:11:33 2013  Eric Hodel  <drbrain@segment7.net>
 
 	* NEWS:  Update for RDoc 4.1.0.preview.1 and RubyGems 2.2.0.preview.1
